--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 .container {
-    background: url(image/image.png);
+    background: url("image/image.png");
     background-size: cover;
     width: 100%;
     height: 100vh;
